ff-split добавлен параметр типа категории в апи
